# AudioSyncMaster

./: .gitignore  README.md  dev.bat  dev.sh  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  release.yml  windows-build.yml
Python Files/: Run.bat  Run2.bat  main.py  main2.py  movie_sync.py  series_sync.py
python/: bridge.py  requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActionButton.tsx  FileDropZone.tsx  ResultsTable.tsx  SegmentedControl.tsx  SettingsPanel.tsx  StatsCard.tsx  ThemeToggle.tsx  WaveformVisualizer.tsx  WindowFrame.tsx
src/pages/: Index.tsx
